tests/ui/item-type-is-not-supported.stderr
error: item is not a struct or enum
 --> tests/ui/item-type-is-not-supported.rs:3:1
  |
3 | #[bitsize(8)]
  | ^^^^^^^^^^^^^
  |
  = help: `#[bitsize]` can only be used on structs and enums
  = note: this error originates in the attribute macro `bitsize` (in Nightly builds, run with -Z macro-backtrace for more info)
